--- a/index.html
+++ b/index.html
@@ -402,6 +402,7 @@ SENHA DO WIFI: LavateriaParaiso (favor considerar as letras L & P MAIUSCULAS ok 
 
         <div class="mensagem-whatsapp">
             <p id="mensagem-10">
+                <strong>Sujestões de delivery para o jantar de hoje:</strong>
                 O atendimento deles se inicia a partir das 18h...
 
 Vou te mandar do *Santino*, 
