--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ SENHA DO WIFI: LavateriaParaiso (favor considerar as letras L & P MAIUSCULAS ok 
 
         </div>
 
-        <h3>Enviar esta mensagem após a anterior</h3>   
+        <h3>Próxima mensagem a ser enviada (Enviar uma após a outra sem hesitar)</h3>
 
         <div class="mensagem-whatsapp">
             <p id="mensagem-10">
@@ -430,7 +430,7 @@ assim eles enviam mais rápido hehe 😝😝 #AgenteEsperaNéRs
             <button class="botao-copiar" onclick="copiarTexto('mensagem-10')">Copiar</button>
         </div>
 
-        <h3>Enviar esta mensagem após a anterior</h3>
+        <h3>Próxima mensagem a ser enviada (Enviar uma após a outra sem hesitar)</h3>
 
         <p class="legenda">
             Lembre-se de trocar o número da senha, colocando
@@ -440,6 +440,12 @@ assim eles enviam mais rápido hehe 😝😝 #AgenteEsperaNéRs
             <p id="mensagem-11">
                 por precaução, caso necessite pode utilizar também a senha para abrir a porta da frente e de
                 vossa suíte  211567#
+
+            </p>
+            <button class="botao-copiar" onclick="copiarTexto('mensagem-11')">Copiar</button>
+        </div>
+
+        
 
 
 
