--- a/senhas.html
+++ b/senhas.html
@@ -20,10 +20,9 @@
     </header>
     <main>
         <section id="senhas">
-            <h2>Senhas de Acesso</h2>
-            <p>Abaixo estão as senhas de acesso para os quartos e porta 
-                principa.
-            </p>
+            <h2>Abaixo estão as senhas de acesso para os quartos e porta 
+                principa.</h2>
+            
             <nav class="menu-quartos">
                 <ul>
                     <li><a href="#quarto-201">Quarto 201</a></li>
