--- a/index.html
+++ b/index.html
@@ -864,5 +864,6 @@ SENHA DO WIFI: LavateriaParaiso (favor considerar as letras L & P MAIUSCULAS ok 
         menu.classList.toggle('active');
     }
 </script>
+<script src="script.js"></script>
 </body>
 </html>
