--- a/senhas.html
+++ b/senhas.html
@@ -55,7 +55,7 @@
                         *Senha da porta principal e do quarto:* *201296#*<br><br>
                         A tecla da fechadura é touch screen, basta encostar para ativar e digitar a senha. 📲<br><br>
                         Caso erre a senha, é só clicar em asterisco (✱) e reiniciar o processo. 🔄<br><br>
-                        Caso, ao tentar abrir movimentando a maçaneta da porta principal para baixo, verifique uma trava de segurança, basta apenas efetuar o movimento para cima e assim ela se abrirá. 🚪🔓<br><br>
+                        Caso ao tentar abrir movimentando a maçaneta da porta principal para baixo e verificar uma trava de segurança, basta apenas efetuar o movimento para cima e assim ela se abrirá. 🚪🔓<br><br>
                         Qualquer dúvida, estamos à disposição! 😊
                     </p>
                     <button class="botao-copiar" onclick="copiarTexto(this)">Copiar</button>
@@ -67,7 +67,7 @@
                         *Senha da porta principal e do quarto:* *202284#*<br><br>
                         A tecla da fechadura é touch screen, basta encostar para ativar e digitar a senha. 📲<br><br>
                         Caso erre a senha, é só clicar em asterisco (✱) e reiniciar o processo. 🔄<br><br>
-                        Caso, ao tentar abrir movimentando a maçaneta da porta principal para baixo, verifique uma trava de segurança, basta apenas efetuar o movimento para cima e assim ela se abrirá. 🚪🔓<br><br>
+                        Caso ao tentar abrir movimentando a maçaneta da porta principal para baixo e verificar uma trava de segurança, basta apenas efetuar o movimento para cima e assim ela se abrirá. 🚪🔓<br><br>
                         Qualquer dúvida, estamos à disposição! 😊
                     </p>
                     <button class="botao-copiar" onclick="copiarTexto(this)">Copiar</button>
@@ -79,7 +79,7 @@
                         *Senha da porta principal e do quarto:* *203284#*<br><br>
                         A tecla da fechadura é touch screen, basta encostar para ativar e digitar a senha. 📲<br><br>
                         Caso erre a senha, é só clicar em asterisco (✱) e reiniciar o processo. 🔄<br><br>
-                        Caso, ao tentar abrir movimentando a maçaneta da porta principal para baixo, verifique uma trava de segurança, basta apenas efetuar o movimento para cima e assim ela se abrirá. 🚪🔓<br><br>
+                        Caso ao tentar abrir movimentando a maçaneta da porta principal para baixo e verificar uma trava de segurança, basta apenas efetuar o movimento para cima e assim ela se abrirá. 🚪🔓<br><br>
                         Qualquer dúvida, estamos à disposição! 😊
                     </p>
                     <button class="botao-copiar" onclick="copiarTexto(this)">Copiar</button>
@@ -91,7 +91,7 @@
                         *Senha da porta principal e do quarto:* *204699#*<br><br>
                         A tecla da fechadura é touch screen, basta encostar para ativar e digitar a senha. 📲<br><br>
                         Caso erre a senha, é só clicar em asterisco (✱) e reiniciar o processo. 🔄<br><br>
-                        Caso, ao tentar abrir movimentando a maçaneta da porta principal para baixo, verifique uma trava de segurança, basta apenas efetuar o movimento para cima e assim ela se abrirá. 🚪🔓<br><br>
+                        Caso ao tentar abrir movimentando a maçaneta da porta principal para baixo e verificar uma trava de segurança, basta apenas efetuar o movimento para cima e assim ela se abrirá. 🚪🔓<br><br>
                         Qualquer dúvida, estamos à disposição! 😊
                     </p>
                     <button class="botao-copiar" onclick="copiarTexto(this)">Copiar</button>
@@ -103,7 +103,7 @@
                         *Senha da porta principal e do quarto:* *205674#*<br><br>
                         A tecla da fechadura é touch screen, basta encostar para ativar e digitar a senha. 📲<br><br>
                         Caso erre a senha, é só clicar em asterisco (✱) e reiniciar o processo. 🔄<br><br>
-                        Caso, ao tentar abrir movimentando a maçaneta da porta principal para baixo, verifique uma trava de segurança, basta apenas efetuar o movimento para cima e assim ela se abrirá. 🚪🔓<br><br>
+                        Caso ao tentar abrir movimentando a maçaneta da porta principal para baixo e verificar uma trava de segurança, basta apenas efetuar o movimento para cima e assim ela se abrirá. 🚪🔓<br><br>
                         Qualquer dúvida, estamos à disposição! 😊
                     </p>
                     <button class="botao-copiar" onclick="copiarTexto(this)">Copiar</button>
@@ -115,7 +115,7 @@
                         *Senha da porta principal e do quarto:* *211567#*<br><br>
                         A tecla da fechadura é touch screen, basta encostar para ativar e digitar a senha. 📲<br><br>
                         Caso erre a senha, é só clicar em asterisco (✱) e reiniciar o processo. 🔄<br><br>
-                        Caso, ao tentar abrir movimentando a maçaneta da porta principal para baixo, verifique uma trava de segurança, basta apenas efetuar o movimento para cima e assim ela se abrirá. 🚪🔓<br><br>
+                        Caso ao tentar abrir movimentando a maçaneta da porta principal para baixo e verificar uma trava de segurança, basta apenas efetuar o movimento para cima e assim ela se abrirá. 🚪🔓<br><br>
                         Qualquer dúvida, estamos à disposição! 😊
                     </p>
                     <button class="botao-copiar" onclick="copiarTexto(this)">Copiar</button>
@@ -127,7 +127,7 @@
                         *Senha da porta principal e do quarto:* *212676#*<br><br>
                         A tecla da fechadura é touch screen, basta encostar para ativar e digitar a senha. 📲<br><br>
                         Caso erre a senha, é só clicar em asterisco (✱) e reiniciar o processo. 🔄<br><br>
-                        Caso, ao tentar abrir movimentando a maçaneta da porta principal para baixo, verifique uma trava de segurança, basta apenas efetuar o movimento para cima e assim ela se abrirá. 🚪🔓<br><br>
+                        Caso ao tentar abrir movimentando a maçaneta da porta principal para baixo e verificar uma trava de segurança, basta apenas efetuar o movimento para cima e assim ela se abrirá. 🚪🔓<br><br>
                         Qualquer dúvida, estamos à disposição! 😊
                     </p>
                     <button class="botao-copiar" onclick="copiarTexto(this)">Copiar</button>
@@ -139,7 +139,7 @@
                         *Senha da porta principal e do quarto:* *213677#*<br><br>
                         A tecla da fechadura é touch screen, basta encostar para ativar e digitar a senha. 📲<br><br>
                         Caso erre a senha, é só clicar em asterisco (✱) e reiniciar o processo. 🔄<br><br>
-                        Caso, ao tentar abrir movimentando a maçaneta da porta principal para baixo, verifique uma trava de segurança, basta apenas efetuar o movimento para cima e assim ela se abrirá. 🚪🔓<br><br>
+                        Caso ao tentar abrir movimentando a maçaneta da porta principal para baixo e verificar uma trava de segurança, basta apenas efetuar o movimento para cima e assim ela se abrirá. 🚪🔓<br><br>
                         Qualquer dúvida, estamos à disposição! 😊
                     </p>
                     <button class="botao-copiar" onclick="copiarTexto(this)">Copiar</button>
@@ -151,7 +151,7 @@
                         *Senha da porta principal e do quarto:* *214301#*<br><br>
                         A tecla da fechadura é touch screen, basta encostar para ativar e digitar a senha. 📲<br><br>
                         Caso erre a senha, é só clicar em asterisco (✱) e reiniciar o processo. 🔄<br><br>
-                        Caso, ao tentar abrir movimentando a maçaneta da porta principal para baixo, verifique uma trava de segurança, basta apenas efetuar o movimento para cima e assim ela se abrirá. 🚪🔓<br><br>
+                        Caso ao tentar abrir movimentando a maçaneta da porta principal para baixo e verificar uma trava de segurança, basta apenas efetuar o movimento para cima e assim ela se abrirá. 🚪🔓<br><br>
                         Qualquer dúvida, estamos à disposição! 😊
                     </p>
                     <button class="botao-copiar" onclick="copiarTexto(this)">Copiar</button>
@@ -163,7 +163,7 @@
                         *Senha da porta principal e do quarto:* *215286#*<br><br>
                         A tecla da fechadura é touch screen, basta encostar para ativar e digitar a senha. 📲<br><br>
                         Caso erre a senha, é só clicar em asterisco (✱) e reiniciar o processo. 🔄<br><br>
-                        Caso, ao tentar abrir movimentando a maçaneta da porta principal para baixo, verifique uma trava de segurança, basta apenas efetuar o movimento para cima e assim ela se abrirá. 🚪🔓<br><br>
+                        Caso ao tentar abrir movimentando a maçaneta da porta principal para baixo e verificar uma trava de segurança, basta apenas efetuar o movimento para cima e assim ela se abrirá. 🚪🔓<br><br>
                         Qualquer dúvida, estamos à disposição! 😊
                     </p>
                     <button class="botao-copiar" onclick="copiarTexto(this)">Copiar</button>
